--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ error_reporting(E_ALL ^ E_WARNING);
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TCP/IP Servicio</title>
+    <title>Panel de control</title>
     <link rel="shortcut icon" href="views/img/logoTCPIP1.png">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -27,7 +27,6 @@ error_reporting(E_ALL ^ E_WARNING);
 
     <div class="container">
         <nav class="navbar justify-content-center pt-5 ">
-            
         </nav>
     </div>
 
@@ -43,7 +42,7 @@ error_reporting(E_ALL ^ E_WARNING);
     <div class="container pt-5">
         <div class="row justify-content-center align-items-center">
             <div class="col-lg-3">
-                <form action="index.php?c=LoginController&a=login" method="post" class="border px-5 pb-5"
+                <form action="" method="post" class="border px-5 pb-5"
                     style="background-color: white; border-radius: 4%;">
 
                     <div class="row text-center">
